Cambios minimos index.html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             </div>
           </div>
           <div id="formularios" class="formularios display">
+            <!--Register-->
             <div id="register" class=" container__register container__login-register display">
               <form class="cajas display" action="asd">
                 <h2>registrarse</h2>
@@ -63,6 +64,7 @@
                 <h5 onclick="finalizarLogin()">quizas en otro momento</h5>
               </form>
             </div>
+            <!--Login-->
             <div id="login" class=" container__login container__login-register display">
               <form class="cajas  display" action="">
                 <h2>iniciar sesion</h2>
