error de ortografia

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
               <form class="cajas  display form-login" action="">
                 <h2>Iniciar sesion</h2>
                 <input id="input-email-user" type="email" value="" placeholder="E-mail"required>
-                <input id="input-password-user" type="password" value="" placeholder="Constraceña"required>
+                <input id="input-password-user" type="password" value="" placeholder="Constraseña"required>
                 <button class="btn">Login</button>
-                <h5 onclick="finalizarLogin()">quizas en otro momento</h5>
+                <h5 onclick="finalizarLogin()">Quizas en otro momento</h5>
               </form>
             </div>
 
