--- a/index.html
+++ b/index.html
@@ -315,9 +315,9 @@
     </section>
 
     <div id="formulario_de_contacto" class="row form formulario_de_contacto"> <!--formulario de contacto-->
-      <div class="col  ubicacion_y_redes">
+      <div class="col-xl-6 col-md-7 col-12 ubicacion_y_redes">
 
-        <div class="row contacto" style="text-align: center;">
+        <div class="row col-xl-6 col-md-7 col-12 contacto" style="text-align: center;">
           <div class="row"><i class="bi bi-envelope-fill"></i></div>
           <div class="row">
             <h4>contacto</h4>
@@ -349,13 +349,13 @@
 
 
     </div>
-    <div id="footer" class="row footer"><!--footer-->
-      <footer>
-        Ciudad Autonoma de Buenos Aires en el bario Parque Chacabuco.Av.asamblea 930,c1424 CABA<br>
+    <footer id="footer" class=" footer"><!--footer-->
+        <p>Ciudad Autonoma de Buenos Aires en el bario Parque Chacabuco.Av.asamblea 930,c1424 CABA</p>
+        <br>
         <a href="https://www.instagram.com/trust_joy_/"><i class="bi bi-instagram"></i></a> 
         <a href="https://www.facebook.com/profile.php?id=100091941191163"><i class="bi bi-facebook"></i></a> 
         <a href="https://twitter.com/"> <i class="bi bi-twitter"></i></a>
-      </footer>
+      
     </div>
 
 
